corrects davis forecast when in light theme + minor alignment in metric temp

--- a/console-light.css
+++ b/console-light.css
@@ -30,7 +30,10 @@ li3{display:none}
 .clock3{position:relative;font-family:weathertext2;font-size:.75rem;color:var(--body-text-light)}
 .clock3 time{position:absolute;top:-17px;margin-left:20px}
 .thedate3{display:none}
+.consoledesc{display:flex;background:0;color:var(--body-text-light);font-size:10px;line-height:1;top:3px;position:absolute;margin-left:165px;font-family:headingtext;text-align:center;box-shadow:-1px -1px 8px rgba(255,255,255,.9),2px 2px 2px rgba(0,0,0,.07);background:#fff;text-transform:none;text-shadow:var(--text-shadow);flex-grow:0;flex-shrink:1;flex-basis:auto;width:100px}
+.consoleunits,a{font-size:10px;font-family:headingtext;text-decoration:none;margin-left:10px;color:var(--white)}
 .moonblock{border-radius:3px;padding:0;padding-left:10px;padding-right:0;padding-top:15px;display:flex;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;margin-left:0;text-align:center;width:250px;position:relative;color:var(--body-text-light);font-size:12px;text-transform:capitalize;height:64px;line-height:2;margin-top:5px;font-family:headingtext}
+
 .date1,.date2{display:block;background:0;color:var(--body-text-light);font-size:.7rem;line-height:1;margin-top:-60px;position:absolute;margin-left:70px;font-family:headingtext;text-shadow:var(--text-shadow)}
 .date2{margin-top:-45px;margin-left:70px}
 .phase2{display:flex;background:0;color:#e1e7ef;font-size:8.5px;line-height:1;margin-top:-50px;position:absolute;font-family:headingtext;max-width:25px;text-align:center;word-wrap:break-word;justify-content:center;align-items:center;margin-left:14px}
@@ -261,8 +264,8 @@ blue1{color:var(--blue);font-size:.85em;margin-left:3px}
 .nav-bottom .ico{background:0;box-shadow:none}
 iconcolor,iconcolor2{position:absolute;color:var(--body-text-light);vertical-align:middle;margin-top:5px}
 iconcolor2{color:var(--blue)}
-.consoleforecast{font-size:11px;width:10rem;text-align:left;margin-left:5px;margin-top:-10px;line-height:1;font-family:headingtext}
-.consoleicon{position:absolute;margin-left:45px;width:40px;top:0}
+.consoleforecast{font-size:11px;width:10rem;text-align:left;margin-left:5px;margin-top:0px;line-height:1;font-family:headingtext}
+.consoleicon{position:absolute;margin-left:35px;width:40px;top:5px}
 .twentyfourhourtrend,.twentyfourhourtrendsmall{display:flex;position:absolute;margin-left:-97px;margin-top:-78px;width:auto;max-width:175px;z-index:1;font-size:8px;border-radius:3px;line-height:.8;color:var(--body-text-light);box-shadow:var(--button-shadow);background:#fff;text-align:left;text-shadow:var(--text-shadow)}
 .twentyfourhourtrendsmall{margin-left:190px;margin-top:44px}
 .consoleunits,a{font-size:10px;font-family:headingtext;text-decoration:none;margin-left:10px;color:var(--white)}
@@ -635,7 +638,7 @@ uvunits{opacity:1;color:#fff;font-size:7px}
 #weather34rainbeaker2{top:95px;left:45px;width:95px;height:75px;border:4px solid #dfe4f0;border-top:0;border-radius:0 0 2px 2px;background:0;-webkit-border-radius:0 0 2px 2px;-moz-border-radius:0 0 2px 2px;-ms-border-radius:0 0 2px 2px;-o-border-radius:0 0 2px 2px;background-image:var(--grid-linesrainbucket);background-size:5px 5px}
 #weather34rainbeaker2:after,#weather34rainbeaker2:before{content:"";position:absolute;top:-1px;width:1px;height:0;border:4px solid #dee3f0;border-bottom:0}
 #weather34rainbeaker2:before{left:-9px}
-#weather34rainbeaker2:after{right:-9px}
+#weather34rainbeaker2:after{right:-9px} 
 .second24hourguage{margin-left:100px;margin-top:-34px}
 .second24hourguage2{position:absolute;margin-left:90px;margin-top:-10px}
 .second24hourguage3{position:absolute;margin-left:170px;margin-top:-10px}
